--- a/content/docs/components/cta.mdx
+++ b/content/docs/components/cta.mdx
@@ -25,7 +25,7 @@ import { ExternalLinks } from "@/components/external-links"
     {
       title: "Component Source",
       url: "https://shuffle.dev",
-      source: "suffle.dev",
+      source: "shuffle.dev",
     },
   ]}
 />
@@ -103,7 +103,7 @@ export default CTA1;
     {
       title: "Component Source",
       url: "https://shuffle.dev",
-      source: "suffle.dev",
+      source: "shuffle.dev",
     },
   ]}
 />
