--- a/content/docs/components/pnf.mdx
+++ b/content/docs/components/pnf.mdx
@@ -9,7 +9,7 @@ import { TypeTable } from "fumadocs-ui/components/type-table";
 import { Tabs, Tab } from "fumadocs-ui/components/tabs";
 import Hero1 from "@/contents/hero/Hero1";
 import Contact1 from "@/contents/contact/Contact1";
-import PNF1 from "@/contents/pnf/PNF1";
+import PNF1 from "@/contents/PNF/PNF1";
 
 {/* // import { url } from "@/app/layout.config"; */}
 
